kubernetes/customer-example-dev.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: customer
  labels:
    ambiente: dev
    tier: backend
    app: customer
spec:
  rules:
  - http:
      paths: 
      - backend:
          serviceName: customer
          servicePort: 8080
        path: /auth
      - backend:
          serviceName: customer
          servicePort: 8080
        path: /users		
---
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    ambiente: dev
    tier: backend
    app: customer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: customer
  selector:
    app: customer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: customer
  labels:
    ambiente: dev
    tier: backend
    app: customer
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        ambiente: dev
        tier: backend
        app: customer
    spec:
      containers:
        - resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "768Mi"
          image: 038361266767.dkr.ecr.us-east-2.amazonaws.com/image-dev:latest
          imagePullPolicy: Always
          name: customer
          ports:
            - containerPort: 8080
              name: customer
          volumeMounts:
          - mountPath: /data/customer-example/properties/dev/config/
            name: config-volume
          - mountPath: /data/customer-example/properties/dev/secrets/
            name: secrets-volume
          - mountPath: /data/customer-example
            name: data-volume
            subPath: data/customer-example
      imagePullSecrets:
        - name: eks-secret
      volumes:
        - name: config-volume
          configMap:
            name: customer-config
        - name: secrets-volume
          secret:
            secretName: customer-secrets
        - name: data-volume
          persistentVolumeClaim:
            claimName: eks-volume
